--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :names %>
-    <%= form.text_field :names %>
+    <%= form.label :name %>
+    <%= form.text_field :name %>
   </div>
 
   <div class="field">
@@ -24,6 +24,11 @@
   <div class="field">
     <%= form.label :sector_id %>
     <%= form.text_field :sector_id %>
+  </div>
+
+  <div class="field">
+    <%= form.label :imageUrl %>
+    <%= form.text_field :imageUrl %>
   </div>
 
   <div class="actions">
