--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,3 +1,6 @@
+.bg-main{
+  background-color: #00253C;
+}
 body {
   background-color: #fff;
   color: #333;
@@ -19,9 +22,9 @@ a {
 a:visited {
   color: #666; }
 
-a:hover {
-  color: #fff;
-  background-color: #000; }
+// a:hover {
+//   color: #fff;
+//   background-color: #000; }
 
 th {
   padding-bottom: 5px; }
