--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -5,7 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Names</th>
+      <th>Name</th>
+      <th>Photo</th>
       <th>Last fed</th>
       <th>Sector</th>
       <th colspan="3"></th>
@@ -15,7 +16,13 @@
   <tbody>
     <% @cats.each do |cat| %>
       <tr>
-        <td><%= cat.names %></td>
+        <td><%= cat.name %></td>
+        <td><% if cat.imageUrl != ""%>
+        <%= image_tag(cat.imageUrl, {:style => "width:150px;"})%>
+        <%else%>
+        <p>No image</p>
+        <%end%>
+        </td>
         <td><%= cat.last_fed %></td>
         <td><%= cat.sector_id %></td>
         <td><%= link_to 'Show', cat %></td>
