--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Names:</strong>
-  <%= @cat.names %>
+  <strong>Name:</strong>
+  <%= @cat.name %>
 </p>
 
 <p>
