Basic onsen implementation

--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,3 +1,4 @@
+<div class = "container mw-100" style="display: flex; justify-content: between; flex-direction: column">
 <p id="notice"><%= notice %></p>
 
 <h1>Cats</h1>
@@ -36,3 +37,4 @@
 <br>
 
 <%= link_to 'New Cat', new_cat_path %>
+</div>
