--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+ .bg-main{
+    background-color: #00253C;
+  }
+.txt-main{
+    color: white;
+    font-family: 'Righteous', cursive;
+  }
+
+.logo{
+  height: 40px;
+  width: 40px;
+}
