--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>CommuniCat</title>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,11 +10,13 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-
+     <%= javascript_pack_tag 'Index' %>
+     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
   </head>
 
-  <body>
-  <div class="container-fluid d-flex flex-column justify-content-center pt-3 bg-main mb-5"> 
+  <body id="app">
+
+  <div class="container-fluid d-flex flex-column justify-content-center pt-3 bg-main mb-2"> 
     <img src=<%=  image_url'Logo.png' %> alt="..." class="ml-auto mr-auto" style="width:80px; height:80px">
     <a href="/"><h1 class="text-center text-light">CommuniCat</h1></a>
   </div>
