--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,13 +1,13 @@
-<%# <div class = "container mw-100" style="display: flex; justify-content: between; flex-direction: row">
+<div class = "container mw-100" style="display: flex; justify-content: between; flex-direction: row">
 <a href="/cats" class="btn btn-outline-secondary" style="width:100px; height:100px">🐈 <br> View Cats</a>
 <% if user_signed_in?%> 
-    <%# <a href="#" class="btn btn-outline-secondary" style="width:100px; height:100px">💗<br>Favourites</a> %>
-    <%# <a href="/cats/new" class="btn btn-outline-secondary" style="width:100px; height:100px"> ➕<br>Add New Cat</a> %>
-    <%# <%= link_to '🚪 Log Out', destroy_user_session_url, method: :delete, class:"btn btn-outline-secondary", style:"width:100px; height:100px" %>
-<%# <% else %>
-    <%# <a href="/users/sign_in" class="btn btn-outline-secondary" style="width:100px; height:100px">🚪<br>Login</a> %>
-<%# <% end %>
-<%# </div> %>
+    <a href="#" class="btn btn-outline-secondary" style="width:100px; height:100px">💗<br>Favourites</a>
+    <a href="/cats/new" class="btn btn-outline-secondary" style="width:100px; height:100px"> ➕<br>Add New Cat</a>
+    <%= link_to '🚪 Log Out', destroy_user_session_url, method: :delete, class:"btn btn-outline-secondary", style:"width:100px; height:100px" %>   
+<% else %>
+    <a href="/users/sign_in" class="btn btn-outline-secondary" style="width:100px; height:100px">🚪<br>Login</a>
+<% end %>
+</div>
 
 
        
