--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,15 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-     <%= javascript_pack_tag 'Index' %>
+     <%# <%= javascript_pack_tag 'Index' %>
      <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
   </head>
 
-  <body id="app">
+  <body>
 
-  <div class="container-fluid d-flex flex-column justify-content-center pt-3 bg-main mb-2"> 
+  <div id="app" class="container-fluid d-flex flex-column justify-content-center pt-3 bg-main mb-2"> 
     <img src=<%=  image_url'Logo.png' %> alt="..." class="ml-auto mr-auto" style="width:80px; height:80px">
-    <a href="/"><h1 class="text-center text-light">CommuniCat</h1></a>
+    <a href="/"><h1 class="text-center txt-main">CommuniCat</h1></a>
   </div>
     <%= yield %>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
