--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,27 +2,41 @@
 <html>
   <head>
     <title>CommuniCat</title>
-
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= favicon_link_tag asset_path('Logo.png') %>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-     <%# <%= javascript_pack_tag 'Index' %>
-     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <%= favicon_link_tag asset_path('Logo.png') %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <%= javascript_pack_tag 'application'%>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <%#link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
+    <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
+    <script src="https://unpkg.com/onsenui/js/onsenui.min.js"></script>%>
   </head>
-
   <body>
+    <a href="/">
+      <header class="container-fluid d-flex flex-column justify-content-center pt-3 bg-main mb-2">
+        <img src=<%=  image_url'Logo.png' %> alt="..." class="ml-auto mr-auto logo" style="width:40px; height:40px">
+        <h2 class="text-center txt-main">CommuniCat</h2>
+      </header>
+    </a>
+    <div id="app" class = "container mb-5">
+      <%= yield %>
+      <% if user_signed_in?%> 
+      <%= link_to destroy_user_session_path, method: :delete, class:"btn btn-danger btn-block text-light fixed-bottom mt-5" do %>
+        <span>
+          <%=icon('fas', 'sign-out-alt', :class=> "fa-1x")%>
+          Log Out
+        </span>
+      <% end %>
+    <% end %>
+    </div>
+    
 
-  <div id="app" class="container-fluid d-flex flex-column justify-content-center pt-3 bg-main mb-2"> 
-    <img src=<%=  image_url'Logo.png' %> alt="..." class="ml-auto mr-auto" style="width:80px; height:80px">
-    <a href="/"><h1 class="text-center txt-main">CommuniCat</h1></a>
-  </div>
-    <%= yield %>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </body>
 </html>
