--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -10,6 +10,10 @@
     <option>5</option>
   </select>
 </div> %>
+<div class="container">
+<h5>Showing Cats of <%=@sector_name%></h5>
+</div>
+
 <ul className="list-group container" style="padding-inline-start: 0px">
   <% @cats.each do |cat| %>
   <li class = "list-group-item">
