--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -1,8 +1,10 @@
 <%#= react_component("ViewCat", { cats: @cats, sectors: @sectors, currentSector: @initial_sector }) %>
+<%= link_to 'Back', cats_path ,:class=>"container"%>
+<br>
+<div class="container">
 
-<p id="notice"><%= notice %></p>
 <% if @cat.imageUrl != ""%>
-        <%= image_tag(@cat.imageUrl, {:style => "width:150px;"})%>
+        <%= image_tag(@cat.imageUrl, {:style => "width:250px;"})%>
         <%else%>
         <p>No image</p>
         <%end%>
@@ -17,11 +19,12 @@
 </p>
 
 <p>
-  <strong>Sector:</strong>
-  <%= @cat.sector_id %>
+  <strong>Estate:</strong>
+  <%= @cat.sector.name %>
 </p>
-<%= link_to 'Log Feeding', new_feed_log_path %> |
-<%= link_to 'View Comments', comments_path %>
-<br>
 <%= link_to 'Edit', edit_cat_path(@cat) %> |
-<%= link_to 'Back', cats_path %>
+
+<%= link_to 'Log Feeding', new_feed_log_path %>
+<%#= link_to 'View Comments', comments_path %>
+<br>
+</div>
