--- a/app/views/cats/edit.html.erb
+++ b/app/views/cats/edit.html.erb
@@ -1,6 +1,47 @@
-<h1>Editing Cat</h1>
+<a href="/" class="container">Back</a>
 
-<%= render 'form', cat: @cat %>
+<div class = "container d-flex flex-column justify-content-center text-center">
+<div><h4>Update Cat Info</h4></div>
 
-<%= link_to 'Show', @cat %> |
-<%= link_to 'Back', cats_path %>
+<%= form_with(model: @cat, local: true) do |form| %>
+  <% if @cat.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(cat.errors.count, "error") %> prohibited this cat from being saved:</h2>
+
+      <ul>
+        <% @cat.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= form.label :name %>
+    <%= form.text_field :name %>
+  </div>
+
+  <div class="field">
+    <%= form.label :last_fed %>
+    <%= form.datetime_select :last_fed %>
+  </div>
+
+  <div class="field">
+    <%#= form.label :sector_id %>
+    <%= form.hidden_field  :sector_id , :value => @sector_id%>
+  </div>
+
+  <div class="field">
+    <%= form.label :imageUrl %>
+    <%#= form.file_field :imageUrl, direct_upload: true, accept: "image/jpeg image/jpg image/png" %>
+    <%= form.text_field :imageUrl %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit %>
+  </div>
+<% end %>
+
+<%#= link_to 'Show', @cat %> 
+<%#= link_to 'Back', cats_path %>
+</div>
