--- a/app/views/cats/new.html.erb
+++ b/app/views/cats/new.html.erb
@@ -1,7 +1,9 @@
+<a href="/" class="container">< Back</a>
+
 <div class = "container d-flex flex-column justify-content-center text-center">
 <div><h4>Add New Cat</h4></div>
 
 <%= render 'form', cat: @cat %>
-<%= link_to 'Back', root_path %>
+<%#= link_to 'Back', root_path %>
 
 </div>
