--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,5 +1,5 @@
 <%#= react_component("CatIndex", { cats: @cats, sectors: @sectors, currentSector: @initial_sector }) %>
-<a href="/" class="container">Back</a>
+<a href="/" class="container">< Back</a>
 <%# <div class="form-group container mt-2">
   <label for="exampleFormControlSelect1">View Cats for Estate:</label>
   <select class="form-control" id="exampleFormControlSelect1">
@@ -10,19 +10,25 @@
     <option>5</option>
   </select>
 </div> %>
-<div class="container">
-<h5>Showing Cats of <%=@sector_name%></h5>
+<div class="container ml-auto mr-auto text-center">
+  <% if user_signed_in?%>
+    <h5>Showing Cats of <%=@sector_name%></h5>
+  <% end %>
 </div>
-
 <ul className="list-group container" style="padding-inline-start: 0px">
   <% @cats.each do |cat| %>
-  <li class = "list-group-item">
-    <a href=<%= "/cats/#{cat.id}" %>>
+    <li class = "list-group-item">
+      <a href=<%= "/cats/#{cat.id}" %>>
          <div class = "row">
             <img src=<%=cat.imageUrl%> style="height:80px; width:80px, object-fit:cover"/>
-            <div class="col"><h5 className="pl-5 mt-2"><%= cat.name %></h5></div>
-         </div>
-        </a>
-        </li>
-  <% end %>
+      <div class="col">
+        <h5 className="pl-5 mt-2"><%= cat.name %></h5>
+        <h6 className="pl-5 mt-1"><%= cat.sector.name %></h5>
+        <p className="pl-5 mt-1">Last Fed: <%= cat.last_fed %></p>
+
+      </div>
+    </div>
+  </a>
+</li>
+<% end %>
 </ul>
