--- a/app/views/cats/edit.html.erb
+++ b/app/views/cats/edit.html.erb
@@ -1,5 +1,4 @@
-<a href="/" class="container">Back</a>
-
+<%= link_to '< Back', cat_path(@cat) , :class => "container"%>
 <div class = "container d-flex flex-column justify-content-center text-center">
 <div><h4>Update Cat Info</h4></div>
 
@@ -35,6 +34,11 @@
     <%= form.label :imageUrl %>
     <%#= form.file_field :imageUrl, direct_upload: true, accept: "image/jpeg image/jpg image/png" %>
     <%= form.text_field :imageUrl %>
+  </div>
+
+  <div class="field">
+    <%= form.label :comment %>
+    <%= form.text_field :comment %>
   </div>
 
   <div class="actions">
